# SmartBursar

./: DAY_1_START.md  DEVELOPMENT_PLAN.md  README.md  SECURITY.md  run-tauri.bat  smartbursar.bat
backend/: requirements.txt  sidecar.py
backend/app/: __init__.py
docs/: SmartBursar.pptx  SmartBursar_Roadmap.pptx  ~$SmartBursar_Roadmap.pptx
docs/architecture/: frontend-architecture.md
docs/backend/: api.md  database.md  reports.md
docs/design/: performance_guidelines.md
docs/developer/: coding-standards.md  development-roadmap.md  git-workflow.md  learning-roadmap.md  setup.md  workflow.md
docs/development/: starting_guidelines.md
docs/frontend/: performance.md  routing.md  ui-guidelines.md
docs/game/: backend-architecture-diagram.html
docs/logos/: full text logo.html  symbol logo.html
docs/product/: architecture-diagram.html  architecture.md  decisions.md  requirements.md  roadmap.md  runtime-architecture.md  vision.md
docs/references/: sqlite.md  tauri.md  ugandan-school-finance.md
frontend/: index.html  package.json  versions.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/layout/: Sidebar.jsx
frontend/src/components/ui/: Input.jsx  Logo.jsx
frontend/src/pages/auth/: Login.jsx
frontend/src/pages/status/: Status.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ipc.rs  lib.rs  main.rs
